[gd_scene load_steps=39 format=2]

[ext_resource path="res://Jumper.wav" type="AudioStream" id=1]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://Player_Shooting_SFX_OGPC_Project_2022.wav" type="AudioStream" id=4]
[ext_resource path="res://OGPC_2022_Player_2_Jumping_Spritesheet.png" type="Texture" id=5]
[ext_resource path="res://Pixilart Sprite Sheet.png" type="Texture" id=6]
[ext_resource path="res://OGPC_Project_Player_Spritesheet_New_Walk_Anim.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7, 8 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 5 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 7 )
region = Rect2( 352, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 7 )
region = Rect2( 336, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 7 )
region = Rect2( 304, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 7 )
region = Rect2( 272, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 7 )
region = Rect2( 240, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 7 )
region = Rect2( 224, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 7 )
region = Rect2( 208, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 6 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 6 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 6 )
region = Rect2( 144, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 6 )
region = Rect2( 176, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 47 ), SubResource( 48 ) ],
"loop": false,
"name": "Jumping_Center",
"speed": 15.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 55 ) ],
"loop": false,
"name": "Jumping_Left",
"speed": 15.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": false,
"name": "Jumping_Right",
"speed": 15.0
}, {
"frames": [ SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ) ],
"loop": true,
"name": "Walking_Left",
"speed": 14.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "Walking_Right",
"speed": 14.0
} ]

[node name="Player_Body" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 3 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -20.0
autoplay = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
frames = SubResource( 1 )
animation = "Jumping_Right"

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true
smoothing_enabled = true
smoothing_speed = 14.8

[node name="Player_Gun_Base" type="Node2D" parent="."]
position = Vector2( 0, -9 )

[node name="Player_Bullet_Position" type="Position2D" parent="Player_Gun_Base"]

[node name="Shooting_SFX_Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
